svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: bitwarden
  name: bitwarden1-nginx
spec:
  ports:
  - name: http-port
    port: 80
    targetPort: 80
  selector:
    app: bitwarden1
